--- a/bower.json
+++ b/bower.json
@@ -15,6 +15,7 @@
     "angular": "~1.3.4"
   },
   "devDependencies": {
-    "angular-mocks": "~1.3.5"
+    "angular-mocks": "~1.3.5",
+    "angular-route": "~1.3.5"
   }
 }
